# SoC

./: CMakeLists.txt  main.cpp
cmake/: DetectOpenCV.cmake
include/: calibration_parameters.h  callback.h  camera.h  camera_info.h  imudata.h  init_parameters.h  orbbec_3dpg.h  resolution.h
